# EHR_extract

./: .gitignore  LICENSE  README.md  discards_test_preterm.json  imaging_metadata_test_preterm.csv  population_test_preterm.json  pyproject.toml
EHR_extract/: custom_find_functions.py  extract.py  get_imgs_from_cb.py  paths.py  summary.py  table.py  utils.py
configs/: SDS_table.yaml  SDS_table_cervix.yaml  SP_table.yaml  default.yaml  test_experiment.yaml  test_make_main_table.yaml  test_preterm.yaml  test_preterm2.yaml  test_preterm_only_EHR.yaml  test_preterm_only_imaging_criteria.yaml  test_preterm_with_imaging.yaml
outputs/2026-04-10/10-21-48/.hydra/: hydra.yaml
outputs/2026-04-10/10-21-59/.hydra/: config.yaml  hydra.yaml
test_data/: generate_test_data.py  holdout.csv  img_type.csv  inspect.ipynb  test_table.csv
